# llms-experiments

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  annotate.py  batch_infer_simple.py  compare_distributions.py  plot_entropy_jsd_charts.py  prompt_builder.py  prompt_examples.md  pyproject.toml  requirements.txt  run_vllm.py  sample_csv_deterministic.py  submit-vllm.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: release.yml  test.yml
condor/: README.md  run.sh  run_matrix_worker.sh  submit.htcondor  submit_additional_a100_models.sub  submit_extra_a100_models.sub  submit_full_matrix_h100.sub  submit_gemma_relaunch_partial.sub  submit_qwen_after_gemma_h100.sub  submit_when_ready.sh
docs/: architecture.md  codebase_guide.html  codebase_guide.md  config.schema.json  configuration.md  result-contract.md  strategies_review.md
experiment-cli/: AUDIT.md  README.md  cli.py  config.py  dataset.py  engine.py  experiment_cli.py  logging_utils.py  manifest.py  output.py  prompts.py  retry.py  tuning.py  validation.py
experiment-cli/config/: local_all_modes_smoke.yaml
experiment-cli/configs/: local_all_modes_smoke.yaml
experiment-cli/data/: make_smoke_data.py  matrix_arguments.tsv  matrix_filtered.csv  matrix_labels.tsv  matrix_nested.json  matrix_records.jsonl  smoke.parquet
experiment-cli/prompt/: candidate-answer.md  context.md  definitions-generic.md  definitions-mft.md  definitions-shvt.md  input.md  output-json.md  retry-structured-output.md  schema-ordinal-score.json  schema-single-label.json  schema-verbalized-confidence.json  system.md  task-multi-label.md  task-ordinal-score.md  task-single-label-code.md  task-single-label.md  task-verbalized-confidence.md  task-yes-no-target.md  task-yes-no.md  theory-generic.md  theory-mft.md  theory-shvt.md
experiment-cli/prompts/schemas/: multi_label.json
experiment-cli/prompts/tasks/: multi_label.md  ordinal_score.md  single_label_code.md  yes_no.md
experiment-cli/tests/: test_experiment_cli.py
experiments/: cpu_llama_cpp_smollm2.yaml  local_all_modes_smoke.yaml  matrix_smoke.yaml  ministral_all_datasets.yaml  soft_multi_label_smoke.yaml
models/: big_models.arg  medium_models.arg  small_models.arg
prompts/: mft_one_label.txt  prompt_examples_0_10.md  prompt_examples_0_100.md  shvt_one_label.txt
prompts_legacy/: prompt_examples_0_20.md  prompt_examples_0_5.md  prompt_examples_v2.md
scripts/: benchmark.py  generate_config_schema.py
scripts/legacy/: annotate.py  run_vllm.py
slurm/: README.md  batch_infer_simple.py  sample_csv_deterministic.py  submit-vllm.sh
slurm/prompts/: mft_one_label.txt
src/llms_experiments/: __init__.py  _core.py  backend.py  cli.py  config.py  external_batch.py  input.py  persistence.py  prompt.py  runner.py
tests/: conftest.py  test_api_backend.py  test_backend_errors.py  test_golden.py  test_llama_cpp_backend.py  test_package.py  test_result_contract.py  test_soft_multi_label.py  test_system_prompt.py  test_units.py  test_verbalized_confidence.py
tests/golden/: parse_enum_from.json  parse_smoke.json  run_matrix.json  run_smoke.json
