[project]
name = "llms-experiments"
version = "0.1.0"
description = "A configuration-driven runner and tools for local LLM experiments"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.24.0",
    "pyarrow>=19.0.1",
    "pydantic>=2.13.0",
    "PyYAML>=6.0.3",
    # Ministral 3 needs the post-Transformers-v5 Mistral/Pixtral dispatch fixes.
    "vllm>=0.20.0,<0.21.0",
    "torch==2.11.0",
    "torchvision==0.26.0",
    "torchaudio==2.11.0",
    "transformers @ git+https://github.com/huggingface/transformers.git@10555512868d663ee1ff627e4f5c5c260114235b",
]

[dependency-groups]
dev = [
    "pytest>=8.3.2",
    "ruff>=0.9.0",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
torchaudio = { index = "pytorch-cu130" }

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "PL",  # pylint
    "RUF", # Ruff-specific rules
]
ignore = [
    "E402",    # Module level import not at top of file (used to set up sys.path)
    "E501",    # Line too long (common in prompts, configs, and notebooks)
    "E731",    # Do not assign a lambda expression (sometimes clearer in local scopes)
    "E741",    # Ambiguous variable name (e.g. 'l')
    "PLR0911", # Too many return statements
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments in function definition
    "PLR0915", # Too many statements
    "PLC0415", # Import should be at top-level (used for lazy imports of torch/vllm)
    "PLR2004", # Magic value used in comparison
    "N806",    # Variable name should be lowercase
    "N818",    # Exception name should end in Error
    "RUF005",  # Concatenation instead of list unpacking
]

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = ["S101"] # Allow standard assert in tests

[tool.ruff.lint.isort]
combine-as-imports = true
