[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llms-experiments"
version = "0.2.0"
description = "Configuration-driven LLM inference with durable Parquet outputs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
# Everything needed to validate, prepare, parse and test. No CUDA wheels.
dependencies = [
    "openai>=2.24.0",
    "pydantic>=2.10,<3",
    "pyarrow>=19.0.1",
    "PyYAML>=6.0.3",
    "requests>=2.32.0",
]

[project.optional-dependencies]
gpu = ["vllm>=0.25.1,<0.26"]
llama-cpp = ["llama-cpp-python>=0.2.0"]

[project.scripts]
llms-experiments = "llms_experiments.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3.2",
    "ruff>=0.9.0",
]
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# The runner logs verbosely to its own files; don't mirror it into failures.
addopts = "--show-capture=no"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "PL",  # pylint
    "RUF", # Ruff-specific rules
]
ignore = [
    "E402",    # Module level import not at top of file (used to set up sys.path)
    "E501",    # Line too long (common in prompts, configs, and notebooks)
    "E731",    # Do not assign a lambda expression (sometimes clearer in local scopes)
    "E741",    # Ambiguous variable name (e.g. 'l')
    "PLR0911", # Too many return statements
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments in function definition
    "PLR0915", # Too many statements
    "PLC0415", # Import should be at top-level (used for lazy imports of torch/vllm)
    "PLR2004", # Magic value used in comparison
    "N806",    # Variable name should be lowercase
    "N818",    # Exception name should end in Error
    "RUF005",  # Concatenation instead of list unpacking
]

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = ["S101"] # Allow standard assert in tests

[tool.ruff.lint.isort]
combine-as-imports = true
